production-infrastructure/authentik-data/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared-data
  labels:
    fleet.cattle.io/managed: "true"
