production-infrastructure/authentik-data/manifests/authentik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  namespace: cloudflared-data
  labels:
    app: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:2024.10.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
            - name: https
              containerPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: cloudflared-data
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: https
      port: 9443
      targetPort: 9443
      protocol: TCP
  selector:
    app: authentik
